# endmsf

./: CMakeLists.txt  CMakeLists.txt~  configFile.txt  configFile.txt~  endmsf.cbp  endmsf.depend  endmsf.depend~  endmsf.layout  imu_m_data.csv  main.cpp  predict.txt  propertyconfig.txt
include/: SSF_Core.h  calcQ.h  eigen_conversions.h  eigen_utils.h  measurement.h  position_measurements.h  position_sensor.h  state.h
src/: SSF_Core.cpp  main.cpp  measurement.cpp  position_sensor.cpp  state.cpp
